# workpulse

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  svelte.config.js  vite.config.js
.github/workflows/: release.yml
core/: Cargo.toml
core/src/: aggregate.rs  billing.rs  classify.rs  devstats.rs  error.rs  git.rs  heatmap.rs  journal.rs  lib.rs  model.rs  report.rs  standup.rs  storage.rs  suggest.rs  summary.rs  trends.rs
docs/: API.md  ARCHITECTURE.md  DATA-MODEL.md  INTEGRATIONS.md  PRIVACY.md  ROADMAP.md
packaging/: PKGBUILD  workpulse.desktop
src/: App.svelte  app.css  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: capture.rs  graph.rs  lib.rs  llm.rs  main.rs  settings.rs  tracker.rs
src/components/: Bars.svelte
src/lib/: api.js
