# Workspace Cargo di WorkPulse: la logica di tracciamento (core) e l'app desktop (src-tauri).
# Stessa struttura di GlyphBox/Oxiterm: il "core" e' Rust puro e non dipende da Tauri,
# cosi' la logica di tracking, aggregazione e reportistica resta riutilizzabile
# (anche da una CLI, un servizio in background o un futuro server di sync).
[workspace]
members = ["core", "src-tauri"]
resolver = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
