# Crate "core": tutta la logica di WorkPulse, riutilizzabile e senza Tauri.
# Contiene il modello dati, la persistenza locale (SQLite via rusqlite "bundled",
# nessuna dipendenza di sistema), la classificazione delle attivita' (progetto/
# ticket/cliente), l'aggregazione dei tempi e la generazione di journal e riepiloghi.
#
# La cattura della finestra attiva (specifica per OS) NON sta qui: il core riceve
# degli "snapshot" gia' pronti, cosi' resta puro e testabile su ogni piattaforma.
[package]
name = "workpulse-core"
version = "0.2.0"
edition = "2021"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
# Date/orari con fuso: usato ovunque per i sample e l'aggregazione giornaliera.
chrono = { version = "0.4", features = ["serde"] }
# SQLCipher incorporato (SQLite + cifratura AES-256), con OpenSSL "vendored":
# il C viene compilato dal sorgente, niente dipendenze di sistema a runtime.
# Abilita la cifratura del DB a riposo (PRAGMA key); senza key resta SQLite normale.
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl"] }
# Regole di classificazione (riconoscere ticket tipo PAM-123, host del browser, ecc.).
regex = "1"

[dev-dependencies]
tempfile = "3"
