[package]
name = "workpulse"
version = "0.1.0"
description = "WorkPulse - tracciamento automatico del lavoro: tempo per progetto/ticket/cliente, work journal e riepiloghi"
authors = ["Antonio Russo"]
license = "MIT"
repository = "https://github.com/russus87/workpulse"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "workpulse_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
# Cartella dati per-utente (dove vive il DB SQLite locale).
dirs = "5"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
# La logica vera (tracking, storage, report) vive nel crate "core".
workpulse-core = { path = "../core" }
